adicionando links para navegacao entre views

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Listing all articles</h1>
 
 <table>
+
   <tr>
     <th>Title</th>
     <th>Text</th>
@@ -14,4 +15,5 @@
       <td><%= link_to 'Show', article_path(article) %></td>
     </tr>
   <% end %>
+  <td><%= link_to 'New Article', new_article_path %></td>
 </table>
