--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,6 +13,7 @@
       <td><%= article.title %></td>
       <td><%= article.text %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
     </tr>
   <% end %>
   <td><%= link_to 'New Article', new_article_path %></td>
