--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,5 +16,5 @@
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
     </tr>
   <% end %>
-  <td><%= link_to 'New Article', new_article_path %></td>
+  <td><%= link_to 'New Article', new_article_url %></td>
 </table>
