--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,6 +14,9 @@
       <td><%= article.text %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Destroy', article_path(article),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
   <td><%= link_to 'New Article', new_article_url %></td>
