--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -16,3 +16,5 @@
         method: :delete,
         data: { confirm: 'Are you sure?' }
   %td= link_to 'New Article', new_article_url
+
+= paginate @articles
