--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -5,11 +5,13 @@
   %tr
     %th Title
     %th Text
+    %th Category
 
   - @articles.each do |article|
     %tr
       %td= article.title
       %td= article.text
+      %td= article.category
       %td= link_to 'Show', article_path(article)
       %td= link_to 'Edit', edit_article_path(article)
       %td= link_to 'Destroy', article_path(article),
