--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -4,6 +4,9 @@
 %p
   %strong Text:
   = @article.text
+%p
+  %strong Category:
+  = @article.category
 %h2 Comments
 = render @article.comments
 %h2 Add a comment:
