implementando testes controller articles

--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -20,3 +20,4 @@
     = form.select :category, Article.categories.keys, include_blank: 'none'
   %p
     = form.submit "Create Article"
+= action_name
