green: teste busca por string no campo titulo com palavras inteiras

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -4,6 +4,8 @@
   %p
     = form.select :category, Article.categories, include_blank: 'All', selected: params[:category]
   %p
+    = form.text_field :search, value: params[:search]
+  %p
     = form.submit "Search"
 %table
 
