iniciando com bootstrap

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,3 +1,5 @@
+= stylesheet_pack_tag 'views/articles/index'
+
 %h1 Listing all articles
 
 = form_with method: :get, local: true, url: articles_url do |form|
